correction to z-index declaration for IE11 compat

--- a/src/stylus/components/_date-picker.styl
+++ b/src/stylus/components/_date-picker.styl
@@ -135,7 +135,7 @@ theme(date-picker, "picker--date")
 
 .picker--date
   .btn
-    z-index: unset
+    z-index: auto
 
   &__table
     position: relative
